# ege

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
examples/: basic.rs  display.rs  simple_game.rs  timer.rs
src/: lib.rs
src/app/: mod.rs
src/entity/: mod.rs
src/events/: errors.rs  handler.rs  handlers.rs  mod.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/math/: angles.rs  constants.rs  mod.rs
src/math/phys/: constants.rs  kinematics.rs  mod.rs  sound.rs
src/tests/: mod.rs
src/tests/enitites/: mod.rs
src/tests/events/: condition.rs  handlers.rs  mod.rs  timed.rs
src/tests/math/: s.rs
src/util/: logging.rs  mod.rs
src/window/: color.rs  image.rs  mod.rs  x11.rs
