[package]
name = "ege"
version = "0.1.0"
edition = "2021"
authors = ["The Epokingine developers"]
description = "Small easy to use game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/epokingine/ege/"
categories = ["game-development", "game-engines"]
keywords = ["game-development", "games", "game-engines"]

[dependencies]
device_query = "4.0.0"
log = "0.4.26"
rand = "0.9.0"
serde_json = "1.0.140"
serde = { version = "1.0.194", features=["derive"] }
x11 = "2.21.0"

[dev-dependencies]
serde_json = "1.0.140"

[features]
logging_disabled = []
